--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,2 +1,7 @@
 $fontPrimary:'Raleway', sans-serif;
 $fontSecondary: 'Roboto Slab', serif;
+$fontColor: #464646;
+
+$itagSize: 4rem;
+
+$boxShadow: 0px 10px 15px 0px rgba(50, 50, 50, 0.51);
