--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -129,14 +129,46 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  background: linear-gradient(135deg, #fffff9 0%, #c8c8dc 51%, #fffff7 99%); }
+
+.divBack {
+  background: rgba(255, 255, 255, 0.75); }
 
 body {
-  max-width: 1300px; }
+  max-width: 1300px;
+  margin: 0 auto; }
 
 .wrapper {
   width: 80%;
   margin: 0 auto; }
+
+i {
+  font-size: 4rem; }
+
+header {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  color: #464646; }
+  header img {
+    width: 100%;
+    display: block; }
+  header ul {
+    border-bottom: 1px solid black; }
+  header h1 {
+    font-size: 5.5rem; }
+
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.75rem; }
 
 ul {
   list-style-type: none;
@@ -144,7 +176,7 @@ ul {
   padding: 0; }
 
 nav {
-  margin-top: 20px;
+  margin-top: 50px;
   width: 100%; }
 
 nav ul {
@@ -154,11 +186,166 @@ nav ul {
       justify-content: center; }
 
 nav ul li {
-  margin: 0 10px; }
+  margin: 0 10px;
+  padding: 0 10px; }
 
 nav a {
   text-decoration: none;
+  color: black;
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem; }
+
+.myName {
+  width: 100%;
+  text-align: center;
+  padding: 50px 0 30px;
   font-family: "Raleway", sans-serif; }
 
-nav ul {
-  list-style-type: none; }
+.aboutMe {
+  display: -ms-flexbox;
+  display: flex;
+  margin: 30px 0;
+  font-family: "Raleway", sans-serif;
+  position: relative;
+  -ms-flex-pack: distribute;
+      justify-content: space-around; }
+
+.aboutMe div {
+  width: calc(50% - 10px); }
+
+.aboutMe__Text {
+  margin: auto 0;
+  padding: 0 10px;
+  background: rgba(255, 255, 255, 0); }
+  .aboutMe__Text p {
+    font-size: 1.5rem; }
+
+.aboutMe__Photo {
+  max-width: 400px;
+  box-shadow: 0px 10px 15px 0px rgba(50, 50, 50, 0.51); }
+
+.skills {
+  padding: 30px 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 50%;
+  margin: 70px auto; }
+
+.skills__Container {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  font-family: "Roboto Slab", serif;
+  margin: 10px 20px;
+  padding: 5px 15px;
+  width: calc(33.3% - 40px);
+  background: rgba(255, 255, 255, 0);
+  font-size: 1.3rem;
+  color: #464646; }
+  .skills__Container i {
+    font-size: 5rem; }
+
+.portfolio__Container {
+  display: -ms-flexbox;
+  display: flex;
+  margin: 100px 0; }
+
+.portfolio__Cell {
+  display: -ms-flexbox;
+  display: flex;
+  position: relative; }
+
+.portfolio__Cell--Icons {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around; }
+
+.portfolio__Cell--Icons p {
+  text-align: center;
+  font-family: "Roboto Slab", serif; }
+
+.portfolio__Cell--Text {
+  padding: 25px 10px;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.3rem;
+  margin: auto 0;
+  color: #464646;
+  background: rgba(255, 255, 255, 0);
+  width: calc(45% - 20px); }
+  .portfolio__Cell--Text p {
+    padding: 10px 0; }
+  .portfolio__Cell--Text h3 {
+    border-bottom: 1px solid #464646; }
+
+.textLeft {
+  margin-right: 20px; }
+
+.textRight {
+  margin-left: 20px; }
+
+.portfolio__Cell--Image {
+  box-shadow: 0px 10px 15px 0px rgba(50, 50, 50, 0.51);
+  max-width: 100%; }
+
+.portfolio__Cell--ImageContainer {
+  width: 55%;
+  position: relative;
+  z-index: -1; }
+
+.portfolio__Cell--Link {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
+
+.portfolio__Cell--Link a {
+  text-decoration: none;
+  box-shadow: 0px 10px 15px 0px rgba(50, 50, 50, 0.51);
+  color: #464646;
+  background: #fffff7;
+  margin: 10px 0 0;
+  padding: 10px 15px;
+  transition: all .5s; }
+  .portfolio__Cell--Link a:hover {
+    background: rgba(255, 255, 255, 0);
+    color: #fffff7;
+    transform: scale(1.3); }
+
+.infoContainer {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
+  text-align: center;
+  font-family: "Roboto Slab", serif;
+  margin: 100px 0; }
+
+.infoContainer__Icons {
+  display: -ms-flexbox;
+  display: flex; }
+
+.infoContainer__Icons--Icon {
+  padding: 10px;
+  margin: 0 5px; }
+
+.infoContainer__Contact ul li {
+  font-size: 2rem; }
+
+.infoContainer__Icons--Icon {
+  font-size: 4rem;
+  margin: 0 15px; }
+  .infoContainer__Icons--Icon a {
+    text-decoration: none;
+    color: #464646; }
