--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,3 +1,33 @@
+header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	color: $fontColor;
+
+	img {
+		width: 100%;
+		display: block;
+	}
+
+	ul {
+	border-bottom: 1px solid black;		
+	}
+
+h1 {
+	font-size: 5.5rem;
+	// text-shadow: 0px 3px 5px rgba(150, 150, 150, 1);
+}
+}
+
+h2 {
+	font-size: 2rem;
+}
+
+h3 {
+	font-size: 1.75rem;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
@@ -5,7 +35,7 @@ ul {
 }
 
 nav {
-	margin-top: 20px;
+	margin-top: 50px;
 	width: 100%;
 }
 
@@ -16,9 +46,49 @@ nav ul {
 
 nav ul li {
 	margin: 0 10px;
+	padding: 0 10px;
 }
 
 nav a {
 	text-decoration: none;
+	color: black;
 	font-family: $fontPrimary;
+	font-size: 2rem;
+}
+
+.myName {
+	width: 100%;
+	text-align: center;
+	padding: 50px 0 30px;
+	font-family: $fontPrimary;
+}
+
+.aboutMe {
+	display: flex;
+	// border: 1px solid black;
+	margin: 30px 0;
+	font-family: $fontPrimary;
+	position: relative;
+	justify-content: space-around;
+}
+
+.aboutMe div {
+	width: calc(50% - 10px);
+}
+
+.aboutMe__Text {
+	// border: 1px solid black;
+	margin: auto 0;
+	padding: 0 10px;
+	background: rgba(255,255,255,0);
+	// box-shadow: $boxShadow;
+
+	p {
+		font-size: 1.5rem;
+	}
+}
+
+.aboutMe__Photo {
+	max-width: 400px;
+	box-shadow: $boxShadow;
 }
