--- a/src/partials/_setup.scss
+++ b/src/partials/_setup.scss
@@ -7,13 +7,23 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 html {
 	font-size: 62.5%;
+background: linear-gradient(135deg, rgba(255,255,249,1) 0%,rgba(200,200,220,1) 51%,rgba(255,255,247,1) 99%);
+}
+
+.divBack {
+	background: rgba(255, 255, 255, 0.75);
 }
 
 body {
 	max-width: 1300px;
+	margin: 0 auto;
 }
 
 .wrapper {
 	width: 80%;
 	margin: 0 auto;
+}
+
+i {
+	font-size: $itagSize;
 }
