--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@import 'partials/_setup';
 @import 'partials/_variables';
+@import 'partials/_setup';
 @import 'partials/_header.scss';
+@import 'partials/_main.scss';
+@import 'partials/_contact';
 
-nav ul {
-	list-style-type: none;
-}
+
