--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -84,11 +84,15 @@ nav a {
 	// box-shadow: $boxShadow;
 
 	p {
-		font-size: 1.5rem;
+		font-size: 1.7rem;
 	}
 }
 
 .aboutMe__Photo {
 	max-width: 400px;
+}
+
+.aboutMe__Photo img {
+	// display: block;
 	box-shadow: $boxShadow;
 }
