--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
-	width: 50%;
+	width: 100%;
 	margin: 70px auto;
 }
 
@@ -16,7 +16,7 @@
 	font-family: $fontSecondary;
 	margin: 10px 20px;
 	padding: 5px 15px;
-	width: calc(33.3% - 40px);
+	width: calc(20% - 40px);
 	background: rgba(255,255,255,0);
 	font-size: 1.3rem;
 	color: $fontColor;
@@ -51,7 +51,7 @@
 .portfolio__Cell--Text {
 	padding: 25px 10px;
 	font-family: $fontPrimary;
-	font-size: 1.3rem;
+	font-size: 1.5rem;
 	margin: auto 0;
 	color: $fontColor;
 	background: rgba(255,255,255,0);
@@ -68,7 +68,6 @@
 
 .textLeft {
 	margin-right: 20px;
-	// left: 50px;
 }
 
 .textRight {
@@ -93,29 +92,18 @@
 
 .portfolio__Cell--Link a {
 	text-decoration: none;
-	// border: 1px solid $fontColor;
 	box-shadow: $boxShadow;
 	color: $fontColor;
 	background: #fffff7;
 	margin: 10px 0 0;
 	padding: 10px 15px;
-	transition: all .5s;
+	transition: all .35s;
 
 	&:hover {
 		background: rgba(255, 255, 255, 0);
-		color: #fffff7;
-		// border: .5px solid #fffff7;
-		transform: scale(1.3);
+		// color: #fffff7;
 	}
 }
-
-// .textRight {
-// 	right: 50px;
-// }
-
-// .textLeft {
-// 	left: 50px;
-// }
 
 .infoContainer {
 	display: flex;
@@ -123,17 +111,28 @@
 	align-items: center;
 	text-align: center;
 	font-family: $fontSecondary;
-	margin: 100px 0;
+	margin: 150px 0;
+	padding: 50px 0;
+	background: #fffff7;
+	box-shadow: $boxShadow;
 }
 
 .infoContainer__Icons {
 	display: flex;
+	margin-top: 30px;
 }
 
-.infoContainer__Icons--Icon {
+.infoContainer__Icons--Icon a {
 	padding: 10px;
 	margin: 0 5px;
+	transition: all .5s;
+
+	i:hover {
+		transform: scale(1.2);
+	}
 }
+
+
 
 .infoContainer__Contact ul li {
 	font-size: 2rem;
