--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -11,7 +11,7 @@ header {
 	}
 
 	ul {
-	border-bottom: 1px solid black;		
+	// border-bottom: 1px solid black;		
 	}
 
 h1 {
@@ -51,15 +51,20 @@ nav ul li {
 
 nav a {
 	text-decoration: none;
-	color: black;
+	// color: black;
+	padding-bottom: 5px;
 	font-family: $fontPrimary;
 	font-size: 2rem;
+}
+
+nav a:hover {
+	border-bottom: 1px solid $fontColor;
 }
 
 .myName {
 	width: 100%;
 	text-align: center;
-	padding: 50px 0 30px;
+	padding: 30px 0 30px;
 	font-family: $fontPrimary;
 }
 
@@ -81,10 +86,10 @@ nav a {
 	margin: auto 0;
 	padding: 0 10px;
 	background: rgba(255,255,255,0);
-	// box-shadow: $boxShadow;
 
 	p {
 		font-size: 1.7rem;
+		line-height: 2.2rem;
 	}
 }
 
